styles/globals.css
html,
body {
  max-width: 100vw;
  overflow-x: hidden; 
  margin: 0;
}

body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

textarea {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.nav-item {
  border-radius: 2px;
  transition: background-color 0.2s ease;
}

.nav-item:hover {
  background-color: rgba(0, 0, 0, 0.05);
}

.create-event-button {
  transition: all 0.2s ease;
  border-radius: 8px;
  color: #0969DA !important;
}

.create-event-button:hover {
  background-color: #0969DA !important;
  color: white !important;
}

.create-event-button:hover img {
  filter: brightness(0) invert(1);
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: light;
  }
}

.zoom-slider {
  transition: all 0.2s ease;
}

.zoom-slider:hover {
  transform: scale(1.05);
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);

}

/* Custom styling for the range input */
.zoom-range {
  -webkit-appearance: none;
  width: 100%;
  height: 1px;
  background: #EBEBEB;
  outline: none;
  margin: 0;
}

/* Style the slider handle (thumb) */
.zoom-range::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  width: 12px;
  height: 12px;
  background: #fff;
  border-radius: 50%;
  cursor: ew-resize;
}

.zoom-range::-moz-range-thumb {
  width: 12px;
  height: 12px;
  background: #fff;
  border-radius: 50%;
  cursor: ew-resize;
  border: none;
}

.calendar-cell-hover {
  opacity: 0;
  transition: opacity 0.2s ease;
}

.calendar-cell-hover:hover {
  opacity: 1;
  color: rgba(0, 0, 0, 0.13) !important;
}

.task-cell {
  display: grid;
  cursor: "pointer";
  place-items: center;
}

.task-cell::before {
  content: "+";
  color: rgba(0, 0, 0, 0.13);
  font-size: 24px;
  cursor: "pointer";
  pointer-events: none;
  grid-area: 1 / 1;
  opacity: 0;
  transition: opacity 0.2s ease;
}

.task-cell:hover::before {
  opacity: 1;
}

